--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <header class="header">
         <h1>Türkiyenin Bölgeleri</h1>
     </header>
-    
+
+    <div class="main">
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3>Marmara Bolgesi</h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
+    </div>
 </body>
 </html>
