--- a/index.html
+++ b/index.html
@@ -12,12 +12,42 @@
         <h1>Türkiyenin Bölgeleri</h1>
     </header>
 
-    <div class="main">
+    <main class="main">
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3>Marmara Bolgesi</h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
+        <!-- <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3></h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
         <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3></h3>
             <a href=""><button>More Detail</button></a>
         </div>
-    </div>
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3></h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3></h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3></h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3></h3>
+            <a href=""><button>More Detail</button></a>
+        </div> -->
+    </main>
 </body>
 </html>
