--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
             <h3>Marmara Bolgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
+        <div class="bolgeCard">
+            <img src="" alt="" class="bolgeImg">
+            <h3>Karadeniz Bölgesi</h3>
+            <a href=""><button>More Detail</button></a>
+        </div>
         <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
-            <h3></h3>
+            <h3>İç Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div>
-        <div class="bolgeCard">
+        </div> -->
+        <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
-            <h3></h3>
+            <h3>Ege Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div>
-        <div class="bolgeCard">
+        </div> -->
+        <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
-            <h3></h3>
+            <h3>Akdeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div>
-        <div class="bolgeCard">
+        </div> -->
+        <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
-            <h3></h3>
+            <h3>Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div>
-        <div class="bolgeCard">
+        </div> -->
+        <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
-            <h3></h3>
-            <a href=""><button>More Detail</button></a>
-        </div>
-        <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
-            <h3></h3>
+            <h3>Güney Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div> -->
     </main>
