--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <h3>Karadeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
-        <!-- <div class="bolgeCard">
+        <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>İç Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div> -->
+        </div>
         <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Ege Bölgesi</h3>
