--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h3>İç Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
-        <!-- <div class="bolgeCard">
+        <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Ege Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div> -->
+        </div>
         <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Akdeniz Bölgesi</h3>
