--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <h3>Akdeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
-        <!-- <div class="bolgeCard">
+        <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div> -->
+        </div>
         <!-- <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Güney Doğu Anadolu Bölgesi</h3>
