--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <h3>Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
-        <!-- <div class="bolgeCard">
+        <div class="bolgeCard">
             <img src="" alt="" class="bolgeImg">
             <h3>Güney Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
-        </div> -->
+        </div>
     </main>
 </body>
 </html>
