--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <main class="main">
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>Marmara Bolgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>Karadeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>İç Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
@@ -34,17 +34,17 @@
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>Akdeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
             <h3>Güney Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
