--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
 
     <main class="main">
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Marmara Bolgesi" class="bolgeImg">
             <h3>Marmara Bolgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Karadeniz Bölgesi" class="bolgeImg">
             <h3>Karadeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="İç Anadolu Bölgesi" class="bolgeImg">
             <h3>İç Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Ege Bölgesi" class="bolgeImg">
             <h3>Ege Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Akdeniz Bölgesi" class="bolgeImg">
             <h3>Akdeniz Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Doğu Anadolu Bölgesi" class="bolgeImg">
             <h3>Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Güney Doğu Anadolu Bölgesi" class="bolgeImg">
             <h3>Güney Doğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
