--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Güney Doğu Anadolu Bölgesi" class="bolgeImg">
-            <h3>Güney Doğu Anadolu Bölgesi</h3>
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Güneydoğu Anadolu Bölgesi" class="bolgeImg">
+            <h3>Güneydoğu Anadolu Bölgesi</h3>
             <a href=""><button>More Detail</button></a>
         </div>
     </main>
