--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href=""><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
-            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Güneydoğu Anadolu Bölgesi" class="bolgeImg">
+            <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="G. Anadolu Bölgesi" class="bolgeImg">
             <h4>Güneydoğu Anadolu Bölgesi</h4>
             <a href=""><button>More Detail</button></a>
         </div>
