--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Marmara Bolgesi" class="bolgeImg">
             <h4>Marmara Bolgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./marmara.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Karadeniz Bölgesi" class="bolgeImg">
             <h4>Karadeniz Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./karadeniz.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="İç Anadolu Bölgesi" class="bolgeImg">
             <h4>İç Anadolu Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./icAnadolu.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Ege Bölgesi" class="bolgeImg">
             <h4>Ege Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./ege.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Akdeniz Bölgesi" class="bolgeImg">
             <h4>Akdeniz Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./akdeniz.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="Doğu Anadolu Bölgesi" class="bolgeImg">
             <h4>Doğu Anadolu Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./doguA.html"><button>More Detail</button></a>
         </div>
         <div class="bolgeCard">
             <img src="https://portal.sanayigazetesi.com.tr/images/marmara-bolgesi.png" alt="G. Anadolu Bölgesi" class="bolgeImg">
             <h4>Güneydoğu Anadolu Bölgesi</h4>
-            <a href=""><button>More Detail</button></a>
+            <a href="./g.dogu.html"><button>More Detail</button></a>
         </div>
     </main>
 </body>
