marmara all cards

--- a/marmara.html
+++ b/marmara.html
@@ -9,11 +9,43 @@
 </head>
 <body>
     <main class="sehirMain">
+
         <div class="sehirCard">
             <img src="" alt="">
             <h4></h4>
             <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
         </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+        <div class="sehirCard">
+            <img src="" alt="">
+            <h4></h4>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur perspiciatis dicta nihil harum, aliquid quia!</p>
+        </div>
+
     </main>
 </body>
 </html>
