--- a/marmara.html
+++ b/marmara.html
@@ -8,6 +8,7 @@
     <title>Marmara Bolgesi</title>
 </head>
 <body>
+<div class="container">
     <main class="sehirMain">
     
         <div class="sehirCard">
@@ -73,5 +74,8 @@
                 adipisicing elit. Dolor, quod. Iusto, at!</p>             
         </div>        
     </main>
+</div>
+
+    
 </body>
 </html>
